tests/errors/unknown_function.ne
function main(): int32
{
    randomFunction();
}
